# FlexFringeUtils

./: .gitignore  pyproject.toml
models/: random_1.json  random_2.json  random_3.json  random_4.json  random_5.json
results/experiment_1/: table.tex
results/experiment_1/random_1/: params.txt  params_dense.txt  results.csv  results_dense.csv
results/experiment_1/random_2/: params.txt  params_dense.txt  results.csv  results_dense.csv
results/experiment_1/random_3/: params.txt  params_dense.txt  results.csv  results_dense.csv
results/experiment_1/random_4/: params.txt  params_dense.txt  results.csv  results_dense.csv
results/experiment_1/reber/: params.txt  params_dense.txt  results.csv  results_dense.csv
results/experiment_2/random_1/: params.txt  results_ensemble.csv  results_single.csv
results/experiment_3/: table.tex  table_no_norm.tex
results/experiment_3/random_1/: params.txt  results.csv
results/experiment_3/random_2/: params.txt  results.csv
results/experiment_3/random_3/: params.txt  results.csv
results/experiment_3/random_4/: params.txt
results/experiment_3/reber/: params.txt
results/experiment_hdfs/: table.tex
src/: cache.py  clock.py  crossentropy.py  distance.ipynb  experiment.ipynb  export.py  ffutils.py  hdfs.ipynb  machines.py  modelvariety.ipynb  orch.ipynb  pdfa.py  variety.py  variety_test.py
