[project]
name = "flexfringeutils"
version = "0.1.0"
description = ""
authors = [
    {name = "blytkowski",email = "b.lytkowski@student.tudelft.nl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz (>=0.20.3,<0.21.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
