[project]
name = "flexfringeutils"
version = "0.1.0"
description = ""
authors = [
    {name = "blytkowski",email = "b.lytkowski@student.tudelft.nl"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
graphviz = ">=0.20.3,<0.21.0"
matplotlib = "^3.10.3"
pyright = "^1.1.400"
ipympl = "^0.9.7"
umap-learn = "^0.5.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
